Add `./mvnw exec:exec` configuration